Fix /block redirecting

--- a/app/templates/sites_page.html
+++ b/app/templates/sites_page.html
@@ -15,13 +15,13 @@
     
     <div class="d2">
         <form action="/change" method="POST">
-            <input type="text" class="d2" id="text" name="text">
+            <input type="text" class="d2" id="text" name="text" placeholder="example.com add">
             <button type="submit">✔</button>
         </form>
     </div>
     <br>
 
-    <span class="hint"> Enter site names separated by commas and method (add or delete) </span>
+    <span class="hint"> Enter site names separated by space and method (add or delete) </span>
 
     <p class="heading">Currently blocked Sites</p>
 
